--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/ci-4-90x37.png" type="image/x-icon">
   <meta name="description" content="Руководство по эксплуатации
 автомобиля и его модификаций">
-  
+ <meta name="google-site-verification" content="dh8JM8olszmZ21RjRnVq4FkbcgASfO5NVT3qYjuyYTM" /> 
   <title>Авто руководства | Chevrolet Niva</title>
   
 <link rel="canonical" href="https://chevrolet-niva.github.io/">
