--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="shortcut icon" href="assets/images/ci-4-90x37.png" type="image/x-icon">
   <meta name="description" content="Руководство по эксплуатации
 автомобиля и его модификаций">
- <meta name="google-site-verification" content="dh8JM8olszmZ21RjRnVq4FkbcgASfO5NVT3qYjuyYTM" /> 
+ <meta name="google-site-verification" content="dh8JM8olszmZ21RjRnVq4FkbcgASfO5NVT3qYjuyYTM" />
+  <meta name="yandex-verification" content="607be7ee6fed57f3" />
   <title>Авто руководства | Chevrolet Niva</title>
  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
